Fix contrast of CC license on nav

--- a/assets/css/fw.css
+++ b/assets/css/fw.css
@@ -447,6 +447,10 @@ details>summary {
   .chlang {
     border-color: #ea6571;
   }
+  
+  #cc {
+    color: #52bada;
+  }
 }
 
 #cc {
